welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:8: error: ';' expected but 'while' found.
    }while(!crossing())
     ^Poucet:10: error: 'while' expected but 'if' found.
  if (A >= 3){
  ^Poucet:21: error: '(' expected but '}' found.
} while (!sortieTrouvee())
^